--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -12,45 +12,78 @@
     margin: 0 auto;
 }
 
-.shelf__row-1 {
-    display: flex;
-    align-items: end;
-    position: relative;
-    top: -20px;
-    left: 12px;
-    gap: 20px;
-
-}
-
-.shelf__row-2 {
-    display: flex;
-    align-items: end;
-    position: relative;
-    top: 12px;
-    left: 4px;
-    gap: 15px;
-}
-
-.shelf__row-2 .product:nth-child(2) {
-    transform: translate(0,12px);
-}
-
-.shelf__row-3 {
-    display: flex;
-    align-items: end;
-    position: relative;
-    top: 16px;
-    left: 11px;
-    gap: 20px;
-
-}
-
 .product {
     cursor: grab;
 }
 
-.product img {
-    width: calc(100% * 1.3);
+.product:nth-child(1) {
+    position: absolute;
+    top: -3px;
+    left: 12px;
+}
+
+.product:nth-child(2) {
+    position: absolute;
+    top: 39px;
+    left: 72px;
+}
+
+.product:nth-child(3) {
+    position: absolute;
+    top: 100px;
+    left: 125px;
+}
+
+.product:nth-child(4) {
+    position: absolute;
+    top: 111px;
+    left: 189px;
+}
+
+.product:nth-child(5) {
+    position: absolute;
+    top: 199px;
+    left: 7px;
+}
+
+.product:nth-child(6) {
+    position: absolute;
+    top: 204px;
+    left: 60px;
+}
+
+.product:nth-child(7) {
+    position: absolute;
+    top: 213px;
+    left: 149px;
+}
+
+.product:nth-child(8) {
+    position: absolute;
+    top: 278px;
+    left: 10px;
+}
+
+.product:nth-child(9) {
+    position: absolute;
+    top: 317px;
+    left: 66px;
+}
+
+.product:nth-child(10) {
+    position: absolute;
+    top: 328px;
+    left: 137px;
+}
+
+.product:nth-child(11) {
+    position: absolute;
+    top: 315px;
+    left: 178px;
+}
+
+.product__img {
+    transform: scale(1.3);
 }
 
 .cart {
@@ -62,7 +95,7 @@
 }
 
 .cart__img  {
-    width: 340px;
+    transform: scale(1.3,1.2);
     position: relative;
     z-index: 50;
     top: -108px;
@@ -71,16 +104,12 @@
 .cart__items {
     position: absolute;
     color: black;
-    width: 210px;
-    height: 128px;
+    width: 242px;
+    height: 146px;
     border: 3px dashed blue;
-    top: -33px;
+    top: -80px;
     margin: 0 auto;
     display: flex;
     align-items: end;
-    left: 75px;
-}
-
-.cart__items img {
-    width: calc(100% * 1.3);
+    left: 85px;
 }
