--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -13,48 +13,48 @@
 }
 
 .product {
-    cursor: grab;
+    cursor: grab;    
 }
 
 .product:nth-child(1) {
     position: absolute;
-    top: -3px;
+    top: 5px;
     left: 12px;
 }
 
 .product:nth-child(2) {
     position: absolute;
-    top: 39px;
+    top: 42px;
     left: 72px;
 }
 
 .product:nth-child(3) {
     position: absolute;
-    top: 100px;
+    top: 95px;
     left: 125px;
 }
 
 .product:nth-child(4) {
     position: absolute;
-    top: 111px;
+    top: 105px;
     left: 189px;
 }
 
 .product:nth-child(5) {
     position: absolute;
-    top: 199px;
+    top: 194px;
     left: 7px;
 }
 
 .product:nth-child(6) {
     position: absolute;
-    top: 204px;
+    top: 200px;
     left: 60px;
 }
 
 .product:nth-child(7) {
     position: absolute;
-    top: 213px;
+    top: 206px;
     left: 149px;
 }
 
@@ -66,24 +66,24 @@
 
 .product:nth-child(9) {
     position: absolute;
-    top: 317px;
+    top: 312px;
     left: 66px;
 }
 
 .product:nth-child(10) {
     position: absolute;
-    top: 328px;
+    top: 324px;
     left: 137px;
 }
 
 .product:nth-child(11) {
     position: absolute;
-    top: 315px;
-    left: 178px;
+    top: 311px;
+    left: 187px;
 }
 
 .product__img {
-    transform: scale(1.3);
+    transform: scale(1.3,1.2);
 }
 
 .cart {
@@ -106,9 +106,53 @@
     color: black;
     width: 242px;
     height: 163px;
-    top: -95px;
+    top: -88px;
     display: flex;
     align-items: end;
     margin: 0 auto;
-    left: 85px;
+    left: 89px;
+    border: 3px dashed blue;
 }
+
+.button-byProducts {
+    display: flex;
+    justify-content: center;
+}
+
+.button-byProducts a {
+    width: 174px;
+    height: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FCE000;
+    color: #21201F;
+    font-size: 16px;
+    border: 0;
+    border-radius: 16px;
+    font-weight: 700;
+    transform: scale(1.3,1.2);
+    position: absolute;
+    top: 605px;
+    z-index: 50;
+    display: none;
+    opacity: 0;
+    transition: all 0.5s  ease ;
+    animation: blink 1s linear infinite; /* 3 повторения */
+    animation-delay: 0.5s; /* Задержка в 0.5 секунды */
+    cursor: pointer;
+}
+
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0.5; }
+    100% { opacity: 1; }
+  }
+  
+a {
+    all: unset;
+    text-decoration: none;
+    color: inherit;
+  }
+
+
