--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -111,7 +111,7 @@
     align-items: end;
     margin: 0 auto;
     left: 89px;
-    border: 3px dashed red;
+    border: 3px dashed yellow;
 }
 
 .button-byProducts {
